--- a/assets/css/_mixins.scss
+++ b/assets/css/_mixins.scss
@@ -1,3 +1,9 @@
+@mixin vpw($width) {
+  @media only screen and (max-width: $width) {
+    @content;
+  }
+}
+
 @mixin vpw-small {
   @media only screen and (max-width: 60em) {
     @content;
